changes made to both files

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <section class="content_two">
             <div class="container">
               <div class="row">
-                <div class="col">
+                <div class="col container microphone-section">
                   <img class="microphone" src="Images/microphone.jpg">
                 </div>
                 <div class="col">
@@ -89,7 +89,7 @@
                   <p>Holisticly predominate extensible testing procedures for reliable supply chains. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
                   <a class="testing btn btn-outline-secondary" href="#top-page">TEST IT</a>
                 </div>
-                <div class="col">
+                <div class="col phones-section">
                   <img class="phone" src="Images/iphone.jpg">
                 </div>
               </div>
@@ -148,4 +148,3 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </body>
 </html>
-
